fixed modal not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,7 @@
   right: 20px !important;
 }
 
+#toggle-modal-button {
+  position: absolute;
+  right: 10px;
+}
